Closed Bug 1830194 Opened 2 years ago Closed 2 years ago

Scroll snapping doesn't work ("bounces back") when flicking with momentum, breaks YouTube Shorts

Categories

(Core :: Panning and Zooming, defect)

All
macOS
defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 + verified
firefox114 + fixed

People

(Reporter: mstange, Assigned: dlrobertson)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

  1. Be on macOS and have a touchpad / magic mouse.
  2. Go to https://snap.glitch.me/carousel.html
  3. Move your mouse into the big blue/grayish box.
  4. Scroll to the right with a quick "flick", i.e. lifting your fingers after a short scroll distance while moving fast.

Expected results:
You should scroll to the right, snapping to one of the boxes in the direction you scrolled in.

Actual results:
The scroll bounces back to where you started, as if the velocity of your flick was ignored for scroll destination finding purposes.

This makes https://www.youtube.com/shorts/ relatively unusable. The only way to navigate to the next video by scrolling is to carefully scroll a large distance before removing your fingers from the touchpad.

This was caused by bug 1168182, according to mozregression.

Dan, can you take a look?

Flags: needinfo?(drobertson)

[Tracking Requested - why for this release]: regression on major web property (YouTube Shorts)

I can also reproduce this bug in 113.0b8, despite the feature from bug 1168182 being Nightly-only.

Given that we're about to build our final 113 beta of the cycle and RC week is next week, I'm wondering if a backout from Beta is the best option for 113 at this point. Unfortunately, rev 658ee1bd76f6 doesn't backout cleanly from Beta :(

I'm not able to reproduce this on Linux (tried with both my laptop's built-in touchpad and an external Apple Trackpad).

The bug is marked as tracked for firefox113 (beta) and tracked for firefox114 (nightly). We have limited time to fix this, the soft freeze is in 7 days. However, the bug still isn't assigned.

:fgriffith, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit auto_nag documentation.

Flags: needinfo?(fgriffith)
Severity: -- → S2
Flags: needinfo?(drobertson)
Assignee: nobody → drobertson

Ensure that the wheel transaction is not invoked at all if
dom.event.wheel-event-groups.enabled is not set when the input is
handled by APZ.

Comment on attachment 9330655 [details]
Bug 1830194 - WheelTransactions are gated by pref. r=botond,mstange

Beta/Release Uplift Approval Request

  • User impact if declined: Sites like https://www.youtube.com/shorts/ may not work correctly
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce: Navigate to https://snap.glitch.me/carousel.html and attempt to scroll the carousel with small short pan gestures.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky):
  • String changes made/needed:
  • Is Android affected?: Unknown
Attachment #9330655 - Flags: approval-mozilla-beta?
Pushed by rvandermeulen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/488c7d952591 WheelTransactions are gated by pref. r=mstange
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

Comment on attachment 9330655 [details]
Bug 1830194 - WheelTransactions are gated by pref. r=botond,mstange

Approved for 113.0rc1, thanks for the quick fix.

Flags: needinfo?(fgriffith)
Attachment #9330655 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Blocks: 1830758
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 114.0a1 (2023.04.11) on macOS 12.
Testing on Firefox RC1 113.0-build1 on macOS 12 with links from bug description, it seems that scrolling with touchpad works as expected.
I can confirm this issue is fixed, I verified with links from bug description using Firefox RC1 113.0 on macOS 12, Win 10 and Ubuntu 20.04 x64.
On Firefox 114.0a1 latest nightly the issue is still reproducible, when attempt to scroll from touchpad with small short pan gestures for example to the right the scroll wheel bounces back.
Dan Robertson can you also confirm that latest nightly is still affected?

Flags: needinfo?(drobertson)

That would make sense. This fix just made sure that the pref is respected in all places as it's supposed to be enabled on Nightly only at the moment. Bug 1830758 tracks fixing the problem in general.

Flags: needinfo?(drobertson)

Thanks, Ryan! We will track bug 1830758 and check there that the problem is fixed in Nightly (when the bug will be resolved).

No longer blocks: 1830758
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: