Bug 1830194 - WheelTransactions are gated by pref. r=mstange, a=RyanVM

Ensure that the wheel transaction is not invoked at all if
dom.event.wheel-event-groups.enabled is not set when the input is
handled by APZ.

Differential Revision: https://phabricator.services.mozilla.com/D176676