dom/events/EventStateManager.cpp
@@ -3699,7 +3699,8 @@ nsresult EventStateManager::PostHandleEvent(nsPresContext* aPresContext,
         case WheelPrefs::ACTION_NONE:
         default:
           bool allDeltaOverflown = false;
-          if (wheelEvent->mDeltaX != 0.0 || wheelEvent->mDeltaY != 0.0) {
+          if (StaticPrefs::dom_event_wheel_event_groups_enabled() &&
+              (wheelEvent->mDeltaX != 0.0 || wheelEvent->mDeltaY != 0.0)) {
             if (frameToScroll) {
               WheelTransaction::WillHandleDefaultAction(
                   wheelEvent, frameToScroll, mCurrentTarget);
